--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -17,7 +17,7 @@
     "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "from googleapiclient.http import MediaFileUpload\n"
+    "from googleapiclient.http import MediaFileUpload"
    ]
   },
   {
@@ -42,7 +42,7 @@
     "\n",
     "users = RandomUser.generate_users(10, {\"nat\": \"br\"})\n",
     "\n",
-    "print(len(users))\n"
+    "print(len(users))"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "\n",
     "users_df = pd.DataFrame(users_info)\n",
     "\n",
-    "print(users_df.head().to_markdown())\n"
+    "print(users_df.head().to_markdown())"
    ]
   },
   {
@@ -200,7 +200,7 @@
     "\n",
     "users_df.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "print(users_df.head().to_markdown())\n"
+    "print(users_df.head().to_markdown())"
    ]
   },
   {
@@ -285,7 +285,7 @@
     "        pokemons.append(response.json())\n",
     "        print(f\"{pokemon_name} - {response}\")\n",
     "    else:\n",
-    "        print(f\"{pokemon_name} - {response}\")\n"
+    "        print(f\"{pokemon_name} - {response}\")"
    ]
   },
   {
@@ -317,7 +317,7 @@
     "for user_index, user_row in users_df.iterrows():\n",
     "    users_df.loc[user_index, \"pokemon\"] = random.choice(initial_pokemons)\n",
     "\n",
-    "print(users_df.head().to_markdown())\n"
+    "print(users_df.head().to_markdown())"
    ]
   },
   {
@@ -338,7 +338,7 @@
     "flow = InstalledAppFlow.from_client_secrets_file(credentials_json, SCOPES)\n",
     "with io.capture_output() as captured:\n",
     "    credentials = flow.run_local_server(port=0)\n",
-    "service = build(\"drive\", \"v3\", credentials=credentials)\n"
+    "service = build(\"drive\", \"v3\", credentials=credentials)"
    ]
   },
   {
@@ -402,7 +402,7 @@
     "        except HttpError as err:\n",
     "            print(f\"{err} for type *{pokemon_type}*\")\n",
     "    else:\n",
-    "        print(f\"Folder for type *{pokemon_type}* already exists\")\n"
+    "        print(f\"Folder for type *{pokemon_type}* already exists\")"
    ]
   },
   {
@@ -466,26 +466,21 @@
     "            )\n",
     "\n",
     "        except HttpError as err:\n",
-    "            print(f\"{err} for type *{pokemon_type}* and gender *{gender}*\")\n"
+    "            print(f\"{err} for type *{pokemon_type}* and gender *{gender}*\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | first_name   | last_name   | gender   | email                       | cell           |   age | state      | pokemon    | region   | pokemon_types       |\n",
-      "|---:|:-------------|:------------|:---------|:----------------------------|:---------------|------:|:-----------|:-----------|:---------|:--------------------|\n",
-      "|  0 | Neila        | Oliveira    | female   | neila.oliveira@example.com  | (97) 2482-9681 |    55 | Amazonas   | cyndaquil  | Norte    | ['fire']            |\n",
-      "|  1 | Dayane       | Campos      | female   | dayane.campos@example.com   | (81) 9297-8780 |    58 | Pernambuco | mudkip     | Nordeste | ['water']           |\n",
-      "|  2 | Maurílio     | da Paz      | male     | maurilio.dapaz@example.com  | (68) 2005-7551 |    63 | Acre       | sobble     | Norte    | ['water']           |\n",
-      "|  3 | Reis         | Freitas     | male     | reis.freitas@example.com    | (63) 6383-8269 |    67 | Tocantins  | rowlet     | Norte    | ['grass', 'flying'] |\n",
-      "|  4 | Analice      | de Souza    | female   | analice.desouza@example.com | (81) 1902-1188 |    74 | Pernambuco | charmander | Nordeste | ['fire']            |\n",
-      "|  5 | Isaura       | Lima        | female   | isaura.lima@example.com     | (74) 2903-6779 |    51 | Bahia      | sobble     | Nordeste | ['water']           |\n"
+      "     region            pokemon_types  user_count\n",
+      "0  Nordeste         water,fire,water           3\n",
+      "1     Norte  fire,water,grass,flying           3\n"
      ]
     }
    ],
@@ -508,6 +503,7 @@
     "    \"Centro-Oeste\": [\"Goiás\", \"Mato Grosso\", \"Mato Grosso do Sul\", \"Distrito Federal\"],\n",
     "}\n",
     "\n",
+    "\n",
     "def get_region(state):\n",
     "    for region, states in regions.items():\n",
     "        if state in states:\n",
@@ -526,35 +522,42 @@
     "extended_users_df[\"region\"] = users_df[\"state\"].apply(get_region)\n",
     "extended_users_df[\"pokemon_types\"] = users_df[\"pokemon\"].apply(get_pokemon_types)\n",
     "\n",
-    "print(extended_users_df.to_markdown())"
+    "filtered_regions_df = extended_users_df[[\"region\", \"pokemon_types\"]].copy()\n",
+    "filtered_regions_df[\"pokemon_types\"] = filtered_regions_df[\"pokemon_types\"].apply(lambda x: \",\".join(x))\n",
+    "filtered_regions_df = (\n",
+    "    filtered_regions_df.groupby(\"region\")[\"pokemon_types\"].apply(lambda x: \",\".join(x.astype(str))).reset_index()\n",
+    ")\n",
+    "filtered_regions_df[\"user_count\"] = extended_users_df.groupby(\"region\").size().values\n",
+    "\n",
+    "print(filtered_regions_df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|          |   Norte |   Sul |   Sudeste |   Nordeste |   Centro-Oeste |\n",
+      "|:---------|--------:|------:|----------:|-----------:|---------------:|\n",
+      "| grass    |       1 |     0 |         0 |          0 |              0 |\n",
+      "| electric |       0 |     0 |         0 |          0 |              0 |\n",
+      "| flying   |       1 |     0 |         0 |          0 |              0 |\n",
+      "| fire     |       1 |     0 |         0 |          1 |              0 |\n",
+      "| water    |       1 |     0 |         0 |          2 |              0 |\n",
+      "| poison   |       0 |     0 |         0 |          0 |              0 |\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "types_by_region = {}\n",
     "for region in regions.keys():\n",
     "    types_by_region[region] = {}\n",
     "    for pokemon_type in pokemon_types:\n",
     "        types_by_region[region][pokemon_type] = 0\n",
-    "\n",
-    "def get_region(state):\n",
-    "    for region, states in regions.items():\n",
-    "        if state in states:\n",
-    "            return region\n",
-    "\n",
-    "\n",
-    "def get_pokemon_types(pokemon):\n",
-    "    pokemon_types = []\n",
-    "    for pokemon_type, pokemon_list in pokemon_by_type.items():\n",
-    "        if pokemon in pokemon_list:\n",
-    "            pokemon_types.append(pokemon_type)\n",
-    "    return pokemon_types\n",
-    "\n",
     "\n",
     "for index, row in users_df.iterrows():\n",
     "    for pokemon_type in get_pokemon_types(row.pokemon):\n",
@@ -566,227 +569,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "region\n",
-       "Norte       3\n",
-       "Nordeste    3\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 253,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "users_df[\"region\"] = \"\"\n",
-    "users_df[\"region\"] = \"\"\n",
-    "\n",
-    "for region, states in regions.items():\n",
-    "    users_df.loc[users_df[\"state\"].isin(states), \"region\"] = region\n",
-    "\n",
-    "user_by_region = users_df[\"region\"].value_counts()\n",
-    "user_by_region\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'types'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.4/envs/greenpeace/lib/python3.10/site-packages/pandas/core/indexes/base.py:3652\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3651\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3652\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3653\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.4/envs/greenpeace/lib/python3.10/site-packages/pandas/_libs/index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.4/envs/greenpeace/lib/python3.10/site-packages/pandas/_libs/index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'types'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[278], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m extended_users_df \u001b[39m=\u001b[39m users_df\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m----> 3\u001b[0m extended_users_df[\u001b[39m\"\u001b[39;49m\u001b[39mtypes\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n\u001b[1;32m      4\u001b[0m \u001b[39m#  = get_pokemon_types(extended_users_df[\"pokemon\"])\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \n\u001b[1;32m      6\u001b[0m \u001b[39m# for pokemon_type, pokemons in pokemon_by_type.items():\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m#     extended_users_df.loc[extended_users_df[\"pokemon\"].isin(pokemons), \"types\"] += f\"{pokemon_type},\" \u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(extended_users_df\u001b[39m.\u001b[39mto_markdown())\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.4/envs/greenpeace/lib/python3.10/site-packages/pandas/core/frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3759\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3760\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3761\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3762\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3763\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.4/envs/greenpeace/lib/python3.10/site-packages/pandas/core/indexes/base.py:3654\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3652\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3653\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3654\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3655\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3656\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3657\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3658\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3659\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'types'"
-     ]
-    }
-   ],
-   "source": [
-    "extended_users_df = users_df.copy()\n",
-    "\n",
-    "extended_users_df[\"types\"]\n",
-    "#  = get_pokemon_types(extended_users_df[\"pokemon\"])\n",
-    "\n",
-    "# for pokemon_type, pokemons in pokemon_by_type.items():\n",
-    "#     extended_users_df.loc[extended_users_df[\"pokemon\"].isin(pokemons), \"types\"] += f\"{pokemon_type},\" \n",
-    "\n",
-    "print(extended_users_df.to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 300,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     region                    types  user_count\n",
-      "0  Nordeste         water,fire,water           3\n",
-      "1     Norte  fire,water,grass,flying           3\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_df = extended_users_df[['region', 'pokemon']].copy()\n",
-    "\n",
-    "\n",
-    "new_df['types'] = extended_users_df.apply(lambda row: get_pokemon_types(row.pokemon), axis=1)\n",
-    "\n",
-    "\n",
-    "# extended_users_df.loc[extended_users_df[\"pokemon\"].isin(pokemons), \"types\"] = \n",
-    "\n",
-    "# new_df[\"types\"] = \n",
-    "new_df['types'] = new_df['types'].apply(lambda x: ','.join(x))\n",
-    "\n",
-    "new_df = new_df.groupby('region')['types'].apply(lambda x: ','.join(x.astype(str))).reset_index()\n",
-    "new_df['user_count'] = extended_users_df.groupby('region').size().values\n",
-    "\n",
-    "\n",
-    "print(new_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "    # for region, states in regions.items():\n",
-    "    #     if row[\"state\"] in states:\n",
-    "    #         for pokemon_type in pokemon_types:\n",
-    "    #             if row[\"pokemon\"] in pokemon_by_type[pokemon_type]:\n",
-    "    #                 types_by_region[region][pokemon_type] += 1\n",
-    "\n",
-    "# type_by_region\n",
-    "# type_by_pokemon = {\n",
-    "#     pokemon: [] for pokemon in pokemons\n",
-    "# }\n",
-    "# type_by_pokemon\n",
-    "\n",
-    "# for pokemon in pokemons:\n",
-    "#     # for type_item in pokemon[\"types\"]:\n",
-    "#         # if type_item[\"type\"][\"name\"] in type_by_pokemon[pokemon[\"name\"]]:\n",
-    "#         #     type_by_pokemon[pokemon[\"name\"]].append(type_item[\"type\"][\"name\"])\n",
-    "\n",
-    "# type_by_pokemon\n",
-    "# pokemon_by_type = {\n",
-    "#     pokemon_type: [] for pokemon_type in pokemon_types\n",
-    "# }\n",
-    "\n",
-    "# for pokemon in pokemons:\n",
-    "#     for type_item in pokemon[\"types\"]:\n",
-    "#         for pokemon_type in pokemon_types:\n",
-    "#             if type_item[\"type\"][\"name\"] == pokemon_type:\n",
-    "#                 pokemon_by_type[pokemon_type].append(pokemon[\"name\"])\n",
-    "\n",
-    "# types\n",
-    "\n",
-    "# for index, row in users_df.iterrows():\n",
-    "#     for region, states in regions.items():\n",
-    "#         if row.state in states:\n",
-    "#             pass\n",
-    "            # print(f\"{region}\")\n",
-    "            # print(f\"{row.pokemon}\")\n",
-    "            # for pokemon_type in pokemon_types:\n",
-    "            #     print(f\"{pokemon_type}\")\n",
-    "\n",
-    "    #             types_by_region[region] += 1\n",
-    "    \n",
-    "\n",
-    "    # types_by_region[row.region].append(row.pokemon)\n",
-    "\n",
-    "# types_by_region\n",
-    "\n",
-    "# extended_users_df = users_df.copy()\n",
-    "# extended_users_df[\"region\"] = \"\"\n",
-    "# extended_users_df[\"types\"] = \"\"\n",
-    "\n",
-    "# for region, states in regions.items():\n",
-    "#     extended_users_df.loc[extended_users_df[\"state\"].isin(states), \"region\"] = region\n",
-    "\n",
-    "# for pokemon_type, pokemons in pokemon_by_type.items():\n",
-    "#     extended_users_df.loc[extended_users_df[\"pokemon\"].isin(pokemons), \"types\"] += f\"{pokemon_type},\" \n",
-    "\n",
-    "# print(extended_users_df.to_markdown())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 251,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "region\n",
-       "Norte       3\n",
-       "Nordeste    3\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Calcula o numero de pessoas por regiao\n",
-    "\n",
-    "# for\n",
-    "\n",
-    "# for pokemon_type in pokemon_types:\n",
-    "\n",
-    "\n",
-    "# users_by_type = extended_users_df['types'].apply(lambda x: x.split(\", \"))\n",
-    "# users_by_type\n",
-    "\n",
-    "# pessoas_por_regiao = extended_users_df['region'].value_counts()\n",
-    "# pessoas_por_regiao\n",
-    "\n",
-    "# tipo_pokemon_por_regiao = extended_users_df.groupby('region')['types'].apply(lambda x: ', '.join(x)).reset_index()\n",
-    "# tipo_pokemon_por_regiao\n",
-    "\n",
-    "# print(extended_users_df.groupby(\"types\", group_keys=True).count().to_markdown())\n",
-    "\n",
-    "\n",
-    "# extended_users_df.agg(lambda x: ','.join(x.astype(str)))\n",
-    "\n",
-    "# extended_users_df['types'] = extended_users_df['types'].str.split(',')\n",
-    "# print(extended_users_df.to_markdown())\n",
-    "\n",
-    "\n",
-    "# pokemon_by_type\n",
-    "\n",
-    "# pokemon_by_type_df = pd.DataFrame.from_dict(pokemon_by_type, orient='index').transpose()\n",
-    "# pokemon_by_type_df\n",
-    "\n",
-    "# df = extended_users_df.explode('types')\n",
-    "# df\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
