Wrapping up Tarefa 4

--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,22 +17,16 @@
     "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "from googleapiclient.http import MediaFileUpload"
+    "from googleapiclient.http import MediaFileUpload\n",
+    "import gspread\n",
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 1\n",
@@ -40,30 +34,16 @@
     "Usar a API do Random User Generator para gerar uma lista de 1.000 usuários brasileiros\n",
     "\"\"\"\n",
     "\n",
-    "users = RandomUser.generate_users(10, {\"nat\": \"br\"})\n",
+    "users = RandomUser.generate_users(1000, {\"nat\": \"br\"})\n",
     "\n",
     "print(len(users))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|    | first_name   | last_name   | gender   | email                          | cell           |   age |\n",
-      "|---:|:-------------|:------------|:---------|:-------------------------------|:---------------|------:|\n",
-      "|  0 | Elisabete    | Silveira    | female   | elisabete.silveira@example.com | (06) 3167-2371 |    65 |\n",
-      "|  1 | Antonino     | da Mata     | male     | antonino.damata@example.com    | (30) 2331-9258 |    28 |\n",
-      "|  2 | Neila        | Oliveira    | female   | neila.oliveira@example.com     | (97) 2482-9681 |    55 |\n",
-      "|  3 | Dayane       | Campos      | female   | dayane.campos@example.com      | (81) 9297-8780 |    58 |\n",
-      "|  4 | Ismael       | da Rosa     | male     | ismael.darosa@example.com      | (02) 7159-8519 |    30 |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 1.1\n",
@@ -90,23 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|    | first_name   | last_name   | gender   | email                       | cell           |   age | state      |\n",
-      "|---:|:-------------|:------------|:---------|:----------------------------|:---------------|------:|:-----------|\n",
-      "|  0 | Neila        | Oliveira    | female   | neila.oliveira@example.com  | (97) 2482-9681 |    55 | Amazonas   |\n",
-      "|  1 | Dayane       | Campos      | female   | dayane.campos@example.com   | (81) 9297-8780 |    58 | Pernambuco |\n",
-      "|  2 | Maurílio     | da Paz      | male     | maurilio.dapaz@example.com  | (68) 2005-7551 |    63 | Acre       |\n",
-      "|  3 | Reis         | Freitas     | male     | reis.freitas@example.com    | (63) 6383-8269 |    67 | Tocantins  |\n",
-      "|  4 | Analice      | de Souza    | female   | analice.desouza@example.com | (81) 1902-1188 |    74 | Pernambuco |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 1.2\n",
@@ -205,41 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bulbasaur - <Response [200]>\n",
-      "charmander - <Response [200]>\n",
-      "squirtle - <Response [200]>\n",
-      "pikachu - <Response [200]>\n",
-      "chikorita - <Response [200]>\n",
-      "cyndaquil - <Response [200]>\n",
-      "totodile - <Response [200]>\n",
-      "treecko - <Response [200]>\n",
-      "torchic - <Response [200]>\n",
-      "mudkip - <Response [200]>\n",
-      "turtwig - <Response [200]>\n",
-      "chimchar - <Response [200]>\n",
-      "piplup - <Response [200]>\n",
-      "snivy - <Response [200]>\n",
-      "tepig - <Response [200]>\n",
-      "oshawott - <Response [200]>\n",
-      "chespin - <Response [200]>\n",
-      "fennekin - <Response [200]>\n",
-      "froakie - <Response [200]>\n",
-      "rowlet - <Response [200]>\n",
-      "litten - <Response [200]>\n",
-      "popplio - <Response [200]>\n",
-      "grookey - <Response [200]>\n",
-      "scorbunny - <Response [200]>\n",
-      "sobble - <Response [200]>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 2\n",
@@ -290,23 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|    | first_name   | last_name   | gender   | email                       | cell           |   age | state      | pokemon    |\n",
-      "|---:|:-------------|:------------|:---------|:----------------------------|:---------------|------:|:-----------|:-----------|\n",
-      "|  0 | Neila        | Oliveira    | female   | neila.oliveira@example.com  | (97) 2482-9681 |    55 | Amazonas   | cyndaquil  |\n",
-      "|  1 | Dayane       | Campos      | female   | dayane.campos@example.com   | (81) 9297-8780 |    58 | Pernambuco | mudkip     |\n",
-      "|  2 | Maurílio     | da Paz      | male     | maurilio.dapaz@example.com  | (68) 2005-7551 |    63 | Acre       | sobble     |\n",
-      "|  3 | Reis         | Freitas     | male     | reis.freitas@example.com    | (63) 6383-8269 |    67 | Tocantins  | rowlet     |\n",
-      "|  4 | Analice      | de Souza    | female   | analice.desouza@example.com | (81) 1902-1188 |    74 | Pernambuco | charmander |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 2.1\n",
@@ -322,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,22 +263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Folder for type *grass* created successfully with ID: 1gJfkwPYhQXK5BekvcEX1sRFH0mewLNfY\n",
-      "Folder for type *electric* created successfully with ID: 1n5aVm6mD27ZACUzdl8giK_p9y6ebcnlW\n",
-      "Folder for type *flying* created successfully with ID: 1xWW2NMFUn9VOqYhVpAclOIPnySexKIU0\n",
-      "Folder for type *fire* created successfully with ID: 1qUcMAnfkxR7LSIzqgrgsD05uDMi9G9RG\n",
-      "Folder for type *water* created successfully with ID: 1hKT4EQ-0It58t8tC8gRK5dxbk_jSqGPo\n",
-      "Folder for type *poison* created successfully with ID: 1cu-T9rzkHPX8TcXJSEt7bSPDDyN03BdK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 3.b\n",
@@ -407,28 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File for type *grass* and gender *male* created successfully with ID: 1AQ8_LR-J1Wj1wHO3EOTprYTyAmbKgikq\n",
-      "File for type *grass* and gender *female* created successfully with ID: 1nCmbP2LjzJ3XSrvhWYoC5kHA4sxB2M2r\n",
-      "File for type *electric* and gender *male* created successfully with ID: 1FwVb0TlOS7-5qwdl9MMnctfMi-SNDFD3\n",
-      "File for type *electric* and gender *female* created successfully with ID: 1HV9mTnrSMDTcw-WD17R1XjW6BYrey2rZ\n",
-      "File for type *flying* and gender *male* created successfully with ID: 1rvRkQlYTmNYO35pFwmMaB0Ri8niERnLM\n",
-      "File for type *flying* and gender *female* created successfully with ID: 1_M1GraBt8EZgfYMH9RCDHqynJ3b705dc\n",
-      "File for type *fire* and gender *male* created successfully with ID: 1QDbTEF0Q2twkpuwh3ritqQJ19ijTMdbn\n",
-      "File for type *fire* and gender *female* created successfully with ID: 1lHmCTY3BSjMHCPFDjpMqwmFLNIo4ongU\n",
-      "File for type *water* and gender *male* created successfully with ID: 1clXHkzIhM2JLKEDsA7RgufwvrD9Nd4Bg\n",
-      "File for type *water* and gender *female* created successfully with ID: 1Sj8uVhcYHmC8tBWdVQlNMul7E_N4xpvg\n",
-      "File for type *poison* and gender *male* created successfully with ID: 1tL-_15M5HIofXN-KdqT4N9q6vxuUY953\n",
-      "File for type *poison* and gender *female* created successfully with ID: 1uzfZQby8k0EWDRMuQv0cUn3uBdNkyS1b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 3.1\n",
@@ -471,19 +359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     region            pokemon_types  user_count\n",
-      "0  Nordeste         water,fire,water           3\n",
-      "1     Norte  fire,water,grass,flying           3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 4\n",
@@ -492,8 +370,6 @@
     "O número de pessoas por região do Brasil (Norte, Sul, Sudeste, Nordeste, Centro-Oeste)\n",
     "e o elemento de seus Pokemons\n",
     "\"\"\"\n",
-    "\n",
-    "users_df.to_csv(\"csvs/users.csv\", index=False)\n",
     "\n",
     "regions = {\n",
     "    \"Norte\": [\"Amazonas\", \"Acre\", \"Tocantins\"],\n",
@@ -528,30 +404,16 @@
     "    filtered_regions_df.groupby(\"region\")[\"pokemon_types\"].apply(lambda x: \",\".join(x.astype(str))).reset_index()\n",
     ")\n",
     "filtered_regions_df[\"user_count\"] = extended_users_df.groupby(\"region\").size().values\n",
+    "filtered_regions_df = filtered_regions_df[[\"region\", \"user_count\", \"pokemon_types\"]]\n",
     "\n",
     "print(filtered_regions_df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|          |   Norte |   Sul |   Sudeste |   Nordeste |   Centro-Oeste |\n",
-      "|:---------|--------:|------:|----------:|-----------:|---------------:|\n",
-      "| grass    |       1 |     0 |         0 |          0 |              0 |\n",
-      "| electric |       0 |     0 |         0 |          0 |              0 |\n",
-      "| flying   |       1 |     0 |         0 |          0 |              0 |\n",
-      "| fire     |       1 |     0 |         0 |          1 |              0 |\n",
-      "| water    |       1 |     0 |         0 |          2 |              0 |\n",
-      "| poison   |       0 |     0 |         0 |          0 |              0 |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "types_by_region = {}\n",
     "for region in regions.keys():\n",
@@ -572,7 +434,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "credentials_dict = json.load(open(credentials_json))\n",
+    "gc, authorized_user = gspread.oauth_from_dict(credentials_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sh = gc.create(\"[GREENPEACE] Resumo\")\n",
+    "\n",
+    "worksheet = sh.add_worksheet(title=\"Número de pessoas por região do Brasil\", rows=100, cols=20)\n",
+    "worksheet.update([filtered_regions_df.columns.values.tolist()] + filtered_regions_df.values.tolist())\n",
+    "\n",
+    "worksheet = sh.add_worksheet(title=\"Elemento de pokemons por região do Brasil\", rows=100, cols=20)\n",
+    "worksheet.update([types_by_region_df.columns.values.tolist()] + types_by_region_df.values.tolist())\n",
+    "\n",
+    "sh.del_worksheet(sh.worksheet(\"Página1\"))\n"
+   ]
   }
  ],
  "metadata": {
